# Fusion_Rush

./: .gitignore  FusionRush.sln  README.md
Binary/Resources/Finish_Model/: Race_Finish.mtl
Binary/Shaders/: ExplodeGeometry.gs  Instancing.vert  Player.frag  Player.vert  Skybox.frag  model.frag  model.vert
Binary/Shaders/DebugDrawMgr/: DebugLine.gs
Design_Doc/: FusionRush_DesignDocument.docx
Libraries/assimp/lib/: assimpd.lib
ProjectShard/: Camera.cpp  Camera.h  DebugDrawManager.cpp  DebugDrawManager.h  EngineComonents.h  EngineComponents.cpp  EngineComponents.h  GameApplication.cpp  GameApplication.h  GameSparksConfiguration.h  GameSparksInfo.cpp  GameSparksInfo.h  Ghost_Racer.txt  HashID.cpp  HashID.h  HashTable.cpp  HashTable.h  InputManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.h  ProjectShard.vcxproj  ProjectShard.vcxproj.filters  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  TestPlayArea.cpp  TestPlayArea.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Todo.txt  WindowManagement.cpp  WindowManagement.h  (+3 more)
ProjectShard/Audio/: Sound.cpp  Sound.h  SoundEngine.cpp  SoundEngine.h
ProjectShard/Core/: HashID.h  HashTable.h  ResourceManager.cpp  ResourceManager.h
ProjectShard/Game/: Barriers.cpp  Barriers.h  Buildings.cpp  Buildings.h  Camera.cpp  Camera.h  FinishedMenu.cpp  FinishedMenu.h  GameApplication.cpp  GameApplication.h  GhostRacer.cpp  GhostRacer.h  MainMenu.cpp  MainMenu.h  MenuText.h  Player.cpp  Player.h  RacingScene.cpp  RacingTrack.cpp  RacingTrack.h  SplashScreen.cpp  SplashScreen.h  TestPlayArea.cpp  TestPlayArea.h  Track.cpp  Track.h  TrackBlock.cpp  TrackBlock.h  TrackSections.cpp  TrackSections.h
ProjectShard/GameSparks/: Cocos2dxPlatform.h  GS.cpp  GSConnection.h  GSIosHelper.mm  GSLeakDetector.h
ProjectShard/GameSparksRT/: GameSparksRT.cpp  IRTCommand.hpp  IRTSessionInternal.hpp
ProjectShard/GameSparksRT/Commands/: ActionCommand.hpp  CommandFactory.cpp  CommandFactory.hpp  LogCommand.cpp  LogCommand.hpp
ProjectShard/GameSparksRT/Connection/: ReliableConnection.hpp
ProjectShard/GameSparksRT/Proto/: PositionStream.hpp  ProtocolParser.hpp
ProjectShard/Input/: InputManager.cpp  InputManager.h
ProjectShard/Math/: CollisionBox.cpp  CollisionBox.h  CollisionRectangle.cpp  MathHelper.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
ProjectShard/Platform/: WindowManagement.cpp  WindowManagement.h
ProjectShard/Renderer/: DebugDrawManager.cpp  DebugDrawManager.h  InstancingEntity.cpp  InstancingEntity.h  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Shader.h  Skybox.cpp  Skybox.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Text.cpp  Text.h  Texture.cpp  Texture.h  stb_image.h
ProjectShard/Resources/Ship/: Shard_Ship.mtl
ProjectShard/Shaders/: CRT_Screen.frag  EnviromentObject.frag  EnviromentObject.vert  ExplodeGeometry.gs  Instancing.vert  Player.frag  Player.vert  SceneBlur.frag  SceneBlur.vert  Skybox.frag  Skybox.vert  Text.frag  Text.vert  UI.frag  model.frag  model.vert
ProjectShard/Shaders/DebugDrawMgr/: DebugCross.gs  DebugCross.vert  DebugLine.frag  DebugLine.gs  DebugLine.vert
ProjectShard/System/: ArgumentException.hpp  Bytes.hpp  Exception.hpp
ProjectShard/System/IO/: IOException.hpp  Stream.hpp
ProjectShard/System/Threading/: Thread.hpp
ProjectShard/mbedtls/: aesni.c  camellia.c  dhm.c  ecp_curves.c  havege.c  hmac_drbg.c  memory_buffer_alloc.c  net.c  padlock.c  ssl_cli.c  ssl_tls.c  x509_crl.c
Source_Code/: FusionRush.sln
Source_Code/Libraries/GameSparks/base/build_scripts/: CMakeLists.txt
Source_Code/Libraries/GameSparks/base/build_scripts/CMakeIncludes/: create_source_groups_macro.cmake.cmake  iterate_subdirs.cmake.cmake
Source_Code/Libraries/GameSparks/base/build_scripts/jni/: Android.mk  Application.mk
Source_Code/ProjectShard/: GameSparksConfiguration.h  GameSparksInfo.cpp  GameSparksInfo.h  Ghost_Racer.txt  ProjectShard.vcxproj  ProjectShard.vcxproj.filters  main.cpp
Source_Code/ProjectShard/Audio/: Sound.cpp  Sound.h  SoundEngine.cpp  SoundEngine.h
Source_Code/ProjectShard/Core/: HashID.cpp  HashID.h  HashTable.h  ResourceManager.cpp  ResourceManager.h
Source_Code/ProjectShard/Game/: Barriers.cpp  Barriers.h  Buildings.cpp  Buildings.h  Camera.cpp  Camera.h  FinishedMenu.cpp  GameApplication.cpp  GameApplication.h  GhostRacer.cpp  GhostRacer.h  MainMenu.cpp  MainMenu.h  MenuText.h  Player.cpp  Player.h  RacingScene.cpp  RacingScene.h  RacingTrack.cpp  RacingTrack.h  SplashScreen.cpp  SplashScreen.h  TrackBlock.cpp  TrackBlock.h  TrackSections.cpp  TrackSections.h
Source_Code/ProjectShard/GameSparks/: GS.h  GSData.h  GSDateTime.cpp  GSMessage.cpp  GSOptional.h  GSTime.h  GSTypedResponse.h  GSUtil.cpp  IGSPlatform.cpp
Source_Code/ProjectShard/GameSparksRT/: IRTSessionListener.hpp
Source_Code/ProjectShard/Input/: InputManager.cpp  InputManager.h
Source_Code/ProjectShard/Math/: CollisionBox.cpp  CollisionBox.h  CollisionRectangle.h  MathHelper.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source_Code/ProjectShard/Platform/: WindowManagement.cpp  WindowManagement.h
Source_Code/ProjectShard/Renderer/: DebugDrawManager.cpp  DebugDrawManager.h  InstancingEntity.cpp  InstancingEntity.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  SpriteRenderer.cpp  SpriteRenderer.h  Text.cpp  Text.h  Texture.cpp  Texture.h  stb_image.h
Source_Code/ProjectShard/Shaders/: CRT_Screen.frag  EnviromentObject.frag  UI.frag
Source_Code/ProjectShard/System/: ArraySegment.hpp  IAsyncResult.hpp  InvalidOperationException.hpp  NotSupportedException.hpp  ObjectDisposedException.hpp
Source_Code/ProjectShard/mbedtls/: asn1parse.c  config.h  ecdsa.c  error.c  md2.c  md5.c  md_wrap.c  oid.c  pkcs11.c  platform.c  ripemd160.c  sha256.c  ssl_cache.c  x509.c  x509write_csr.c  xtea.c
(+170 files in other folders)
